attached_assets/Pasted-PS-E-delivery-app-delivery-app-abidjan-backend-venv-Scripts-activate-venv-PS-E-delivery-app--1749806539448_1749806539451.txt
PS E:\delivery-app\delivery-app-abidjan\backend> .\venv\Scripts\activate
(venv) PS E:\delivery-app\delivery-app-abidjan\backend> python run.py
INFO:     Will watch for changes in these directories: ['E:\\delivery-app\\delivery-app-abidjan\\backend']
INFO:     Uvicorn running on http://0.0.0.0:8000 (Press CTRL+C to quit)
INFO:     Started reloader process [15924] using StatReload
Process SpawnProcess-1:
Traceback (most recent call last):
  File "C:\Python312\Lib\multiprocessing\process.py", line 314, in _bootstrap
    self.run()
  File "C:\Python312\Lib\multiprocessing\process.py", line 108, in run
    self._target(*self._args, **self._kwargs)
  File "E:\delivery-app\delivery-app-abidjan\backend\venv\Lib\site-packages\uvicorn\_subprocess.py", line 76, in subprocess_started
    target(sockets=sockets)
  File "E:\delivery-app\delivery-app-abidjan\backend\venv\Lib\site-packages\uvicorn\server.py", line 61, in run      
    return asyncio.run(self.serve(sockets=sockets))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python312\Lib\asyncio\runners.py", line 194, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "C:\Python312\Lib\asyncio\runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python312\Lib\asyncio\base_events.py", line 664, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "E:\delivery-app\delivery-app-abidjan\backend\venv\Lib\site-packages\uvicorn\server.py", line 68, in serve    
    config.load()
  File "E:\delivery-app\delivery-app-abidjan\backend\venv\Lib\site-packages\uvicorn\config.py", line 467, in load    
    self.loaded_app = import_from_string(self.app)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "E:\delivery-app\delivery-app-abidjan\backend\venv\Lib\site-packages\uvicorn\importer.py", line 21, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python312\Lib\importlib\__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1381, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1354, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1325, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 929, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 994, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "E:\delivery-app\delivery-app-abidjan\backend\app\main.py", line 10, in <module>
    from .db.init_db import init_db
  File "E:\delivery-app\delivery-app-abidjan\backend\app\db\init_db.py", line 5, in <module>
    from ..models.user import User, UserRole, UserStatus, BusinessProfile, CourierProfile
  File "E:\delivery-app\delivery-app-abidjan\backend\app\models\__init__.py", line 8, in <module>
    from .user import (
  File "E:\delivery-app\delivery-app-abidjan\backend\app\models\user.py", line 10, in <module>
    from .transport import VehicleType
  File "E:\delivery-app\delivery-app-abidjan\backend\app\models\transport.py", line 140
    ```Adding business profile related models.
    ^
SyntaxError: invalid syntax
